fix(example-prompts): fix overlaping with logo

--- a/src/widgets/chat/ui/ExamplePrompts/ExamplePrompts.module.scss
+++ b/src/widgets/chat/ui/ExamplePrompts/ExamplePrompts.module.scss
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 8px;
+  background: var(--main-background-primary);
 }
 
 .prompt {
